test/libyul/yulSyntaxTests/functional_partial.yul
{
    let x := byte
}
// ----
// DeclarationError 8198: (15-19): Identifier not found.
